--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ Flask-Cors==3.0.10
 python-dateutil==2.8.2
 Flask-Session==0.4.0
 PyJWT==2.6.0
+google-cloud-bigquery==3.11.4
+pyarrow==14.0.1
+db-dtypes==1.1.1
